# krellix

./: .gitignore  CMakeLists.txt  README.md
docs/: plugin-spec.md  theme-spec.md
packaging/arch/: PKGBUILD
packaging/arch/krellix-git/: PKGBUILD
packaging/systemd/: krellixd.service
packaging/systemd/krellixd.service.d/: bare-metal-hardening.conf  docker-aliases.conf
plugins/krelldacious/: KrelldaciousPlugin.cpp  KrelldaciousPlugin.h
plugins/krellkam/: KrellkamPlugin.cpp  KrellkamPlugin.h  README.md
plugins/krellmail/: KrellmailPlugin.cpp  KrellmailPlugin.h
plugins/krellmoon/: KrellmoonPlugin.cpp  KrellmoonPlugin.h
plugins/krellspectrum/: KrellSpectrumPlugin.cpp  KrellSpectrumPlugin.h
plugins/krellstorm/: KrellstormPlugin.cpp  KrellstormPlugin.h
plugins/krellweather/: KrellweatherPlugin.cpp  KrellweatherPlugin.h
plugins/krellwire/: KrellwirePlugin.cpp  KrellwirePlugin.h
src/krellix/: KrellmailOAuthBroker.cpp  KrellmailOAuthBroker.h  MainWindow.cpp  MainWindow.h  PluginLoader.cpp  PluginLoader.h  SettingsDialog.cpp  SettingsDialog.h  main.cpp
src/krellixd/: ClientSession.cpp  ClientSession.h  KrellixdServer.cpp  KrellixdServer.h  main.cpp
src/monitors/: BatteryMonitor.cpp  BatteryMonitor.h  ClockMonitor.cpp  ClockMonitor.h  CpuMonitor.cpp  CpuMonitor.h  DiskMonitor.cpp  DiskMonitor.h  HostMonitor.cpp  HostMonitor.h  MemMonitor.cpp  MemMonitor.h  MonitorBase.cpp  MonitorBase.h  NetMonitor.cpp  NetMonitor.h  NetPortMonitor.cpp  NetPortMonitor.h  ProcMonitor.cpp  ProcMonitor.h  SensorsMonitor.cpp  SensorsMonitor.h  UptimeMonitor.cpp  UptimeMonitor.h
src/remote/: RemoteSource.cpp  RemoteSource.h
src/sdk/: KrellixPlugin.h
src/sysdep/: BatteryStat.cpp  BatteryStat.h  CpuStat.cpp  CpuStat.h  DiskStat.cpp  DiskStat.h  DockerNet.cpp  DockerNet.h  MemStat.cpp  MemStat.h  NetPortStat.cpp  NetPortStat.h  NetStat.cpp  NetStat.h  ProcStat.cpp  ProcStat.h  SensorStat.cpp  SensorStat.h  UptimeStat.cpp  UptimeStat.h
src/theme/: Theme.cpp  Theme.h
src/widgets/: AlertBanner.cpp  AlertBanner.h  Chart.cpp  Chart.h  Decal.cpp  Decal.h  Krell.cpp  Krell.h  Meter.cpp  Meter.h  Panel.cpp  Panel.h
themes/aliens/: ATTRIBUTION.txt  theme.json
themes/aurora/: theme.json
themes/bluesteel/: ATTRIBUTION.txt  theme.json
themes/catppuccin-mocha/: theme.json
themes/cheese/: ATTRIBUTION.txt  theme.json
themes/colbalt2/: theme.json
themes/cthulhain/: theme.json
themes/default/: theme.json
themes/dracula/: theme.json
themes/duskfox/: theme.json
themes/everforest/: theme.json
themes/gorilla/: theme.json
themes/gotham/: theme.json
themes/gruvbox-dark/: theme.json
themes/lcars/: ATTRIBUTION.txt  theme.json
themes/lumon/: theme.json
themes/nightfox/: theme.json
themes/nord/: theme.json
themes/onedark/: theme.json
themes/prime23/: theme.json
themes/suede/: theme.json
themes/tokyo-night/: theme.json
themes/tokyo-night-moon/: theme.json
themes/tokyo-night-storm/: theme.json
